--- a/Front-End/store.css
+++ b/Front-End/store.css
@@ -20,6 +20,7 @@ h1{
     font-size: 40px;
     font-weight:bold;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 h3{
@@ -28,6 +29,7 @@ h3{
 }
 
 h2{
+    font-size: 130%;
     margin-bottom: 0px;
     text-align: center;
 }
@@ -61,8 +63,8 @@ h3 img{
 
 .expo{
     background-color: rgba(109, 80, 135, 0.701);
-    width:300px;
-    height:250px;
+    width:20%;
+    height:270px;
     display:flex;
     flex-direction:column;
     justify-content: space-around;
@@ -72,6 +74,7 @@ h3 img{
     display:flex;
     flex-direction:row;
     justify-content: space-around;
+    width:100%;
 }
 
 .expo img{
