--- a/Front-End/store.css
+++ b/Front-End/store.css
@@ -84,3 +84,22 @@ h3 img{
 h2{
    text-align: center;
 }
+
+input{
+    width:25%;
+    margin-top: 0;
+}
+
+label{
+    margin-bottom: 0;
+}
+
+#title{
+    position:fixed;
+    top:4%;
+    font-size: 40px;
+    font-weight:bold;
+    left:45%;
+    right:45%;
+
+}
