Created Admin Page, accessible at the bottom right of the main page.

--- a/Front-End/style.css
+++ b/Front-End/style.css
@@ -67,3 +67,11 @@ input{
 label{
     margin-bottom: 0;
 }
+
+.admin{
+    float:right;
+    position:absolute;
+    bottom:10;
+    right:10;
+    font-size:30px;
+}
